# kiri-ocr

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test_refactor.py
.github/workflows/: publish.yml
benchmark/: generate_bench_data.py  run_benchmark.py  visualize_results.py
kiri_ocr/: DETECTOR.kh.md  DETECTOR.md  __init__.py  cli.py  core.py  detector.py  model.py  model_transformer.py  renderer.py  training.py  training_transformer.py
kiri_ocr/detector/: __init__.py  craft.py  craft_utils.py  dataset.py  db.py  dbnet.py  legacy.py  training.py  yolo.py
kiri_ocr/detector/db/: model.py
scripts/: kiri-ocr  push_to_hub.py
