[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiri_ocr"
version = "0.1.1"
description = "A lightweight OCR library for Khmer and English documents"
authors = [
    {name = "Blizzer"}
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "opencv-python>=4.7.0",
    "Pillow>=9.0.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "scipy",
    "datasets>=2.14.0",
    "huggingface_hub>=0.16.0",
    "PyYAML"
]
requires-python = ">=3.6"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
kiri-ocr = "kiri_ocr.cli:main"

[tool.setuptools.packages.find]
include = ["kiri_ocr*"]
